--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
                                     <!-- Error Message -->
                                 </div>
                                 <div class="col-lg-6 login-btm login-button">
-                                    <button type="submit" value="submit" class="btn btn-outline-primary">LOGIN</button>
+                                    <button type="submit" value="submit" class="btn btn-outline-primary" id="but_submit" name="but_submit">LOGIN</button>
                                 </div>
                             </div>
                         </form>
