--- a/dashboard_sample.html
+++ b/dashboard_sample.html
@@ -10,7 +10,7 @@
 	
 	<!-- CSS -->
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
+	<link href="css/dashboard.css" rel="stylesheet">
 </head>
 
 <body class="fix-header fix-sidebar card-no-border">
@@ -73,8 +73,27 @@
 			<div class="container-fluid">
 				<div class="row page-titles">
 					<div class="col-md-5 align-self-center">
-						<h3 class="text-themecolor">Dashboard</h3>
+						<h3 class="text-themecolor">Dashboard</h3>	
 					</div>
+					<div class="col-md-12 align-self-center">
+						<div class="container">
+							<div class="row">
+								<div class="column">
+									<p></p>
+								</div>
+								<div class="column">
+									<p></p>
+								</div>
+								<div class="column">
+									<p></p>
+								</div>
+								<div class="column">
+									<p></p>
+								</div>
+							</div>
+						</div>
+					</div>
+					
 				</div>
 			</div>
 			<!-- footer -->
